--- a/Core/1.15Additional-Capabilities-of-the-ApplicationContext.md
+++ b/Core/1.15Additional-Capabilities-of-the-ApplicationContext.md
@@ -10,7 +10,7 @@
 
 ##1.15.1 MessageSource国际化
 
-ApplicationContext接口扩展了一个名为MessageSource的接口，因此提供国际化（“i18n”）功能。Spring还提供了层次化的消息源接口，可以对消息进行层次化的解析。这些接口共同提供了弹簧效应消息解决的基础。在这些接口上定义的方法包括：
+ApplicationContext接口扩展了一个名为MessageSource的接口，因此提供国际化（“i18n”）功能。Spring还提供了层次化的消息源接口，可以对消息进行层次化的解析。这些接口共同提供了Spring效应消息解决的基础。在这些接口上定义的方法包括：
 
 * String getMessage(String code, Object[] args, String default, Locale loc):从MessageSource获取消息的基本方法，如果在提供的locale中没有找到消息，那么将使用默认的消息。通过使用标准库提供的MessageFormat功能，传入的任何参数都将成为替换值。
 
