--- a/WebServlet/1.3Annotated-Controllers.md
+++ b/WebServlet/1.3Annotated-Controllers.md
@@ -904,6 +904,225 @@ public class UserController extends AbstractController {
 }
 ~~~
 
+## 1.3.4 Model
+
+您可以使用@ModelAttribute批注：
+
+* 在@RequestMapping方法中的方法参数上，可从模型创建或访问对象，并将其通过WebDataBinder绑定到请求。
+
+* 作为@Controller或@ControllerAdvice类中的方法级注释，可在任何@RequestMapping方法调用之前帮助初始化模型。
+
+* 在@RequestMapping方法上标记其返回值的是模型属性。
+
+本节讨论@ModelAttribute方法-前面列表中的第二项。控制器可以具有任意数量的@ModelAttribute方法。所有此类方法均在同一控制器中的@RequestMapping方法之前调用。也可以通过@ControllerAdvice在控制器之间共享@ModelAttribute方法。有关更多详细信息，请参见“控制器建议”部分。
+
+@ModelAttribute方法具有灵活的方法签名。它们支持与@RequestMapping方法相同的许多参数，除了@ModelAttribute本身或与请求正文相关的任何东西。
+
+下面的示例显示一个@ModelAttribute方法：
+
+~~~java
+@ModelAttribute
+public void populateModel(@RequestParam String number, Model model) {
+    model.addAttribute(accountRepository.findAccount(number));
+    // add more ...
+}
+~~~
+
+以下示例仅添加一个属性：
+
+~~~java
+@ModelAttribute
+public Account addAccount(@RequestParam String number) {
+    return accountRepository.findAccount(number);
+}
+~~~
+
+>如果未明确指定名称，则根据Object 类型选择默认名称，如javadoc中针对的解释Conventions。您始终可以使用重载addAttribute方法或通过nameon 的属性@ModelAttribute（用于返回值）来分配显式名称。
+
+您也可以将@ModelAttribute用作@RequestMapping方法上的方法级注释，在这种情况下，@ RequestMapping方法的返回值将解释为模型属性。 通常不需要这样做，因为它是HTML控制器的默认行为，除非返回值是一个String，否则它将被解释为视图名称。 @ModelAttribute还可以自定义模型属性名称，如以下示例所示：
+
+~~~java
+@GetMapping("/accounts/{id}")
+@ModelAttribute("myAccount")
+public Account handle() {
+    // ...
+    return account;
+}
+~~~
+
+## 1.3.5 DataBinder
+
+@Controller或@ControllerAdvice类可以具有用于初始化WebDataBinder实例的@InitBinder方法，而这些方法又可以：
+
+* 将请求参数（即表单或查询数据）绑定到模型对象。
+
+* 将基于字符串的请求值（例如请求参数，路径变量，标头，Cookie等）转换为控制器方法参数的目标类型。
+
+* 呈现HTML表单时，将模型对象的值格式化为String值。
+
+@InitBinder方法可以注册特定于控制器的java.bean.PropertyEditor或Spring Converter和Formatter组件。 另外，您可以使用MVC配置在全局共享的FormattingConversionService中注册Converter和Formatter类型。
+
+@InitBinder方法支持与@RequestMapping方法相同的许多参数，除了@ModelAttribute（命令对象）参数。 通常，它们使用WebDataBinder参数（用于注册）和无效的返回值声明。 以下清单显示了一个示例：
+
+~~~java
+@Controller
+public class FormController {
+
+    @InitBinder 
+    public void initBinder(WebDataBinder binder) {
+        SimpleDateFormat dateFormat = new SimpleDateFormat("yyyy-MM-dd");
+        dateFormat.setLenient(false);
+        binder.registerCustomEditor(Date.class, new CustomDateEditor(dateFormat, false));
+    }
+
+    // ...
+}
+~~~
+
+另外，当通过共享的FormattingConversionService使用基于Formatter的设置时，可以重新使用相同的方法并注册特定于控制器的Formatter实现，如以下示例所示：
+
+~~~java
+@Controller
+public class FormController {
+
+    @InitBinder 
+    protected void initBinder(WebDataBinder binder) {
+        binder.addCustomFormatter(new DateFormatter("yyyy-MM-dd"));
+    }
+
+    // ...
+}
+~~~
+
+## 1.3.6 Exceptions
+
+@Controller和@ControllerAdvice类可以具有@ExceptionHandler方法来处理控制器方法中的异常，如以下示例所示：
+
+~~~java
+@Controller
+public class SimpleController {
+
+    // ...
+
+    @ExceptionHandler
+    public ResponseEntity<String> handle(IOException ex) {
+        // ...
+    }
+}
+~~~
+
+该异常可能与正在传播的顶级异常（即，直接IOException被抛出）匹配，也可能与顶级包装器异常（例如，包装在IllegalStateException内部的IOException）内的直接原因匹配。
+
+对于匹配的异常类型，如前面的示例所示，最好将目标异常声明为方法参数。 当多个异常方法匹配时，根源异常匹配通常比原因异常匹配更可取。 更具体地说，ExceptionDepthComparator用于根据从引发的异常类型开始的深度对异常进行排序。
+
+另外，注释声明可以缩小异常类型以使其匹配，如以下示例所示：
+
+~~~java
+@ExceptionHandler({FileSystemException.class, RemoteException.class})
+public ResponseEntity<String> handle(IOException ex) {
+    // ...
+}
+~~~
+
+您甚至可以使用带有非常通用的参数签名的特定异常类型的列表，如以下示例所示：
+
+~~~java
+@ExceptionHandler({FileSystemException.class, RemoteException.class})
+public ResponseEntity<String> handle(Exception ex) {
+    // ...
+}
+~~~
+
+>根和原因异常匹配之间的区别可能令人惊讶。
+
+>在前面显示的IOException变体中，通常使用实际的FileSystemException或RemoteException实例作为参数来调用该方法，因为这两个实例均从IOException扩展。 但是，如果任何此类匹配异常都在本身是IOException的包装器异常中传播，则传入的异常实例就是该包装器异常。
+
+>在handle（Exception）变体中，行为甚至更简单。 在包装方案中，总是使用包装程序异常来调用此方法，在这种情况下，实际匹配的异常可以通过ex.getCause（）找到。 仅当将它们作为顶级异常抛出时，传入的异常才是实际的FileSystemException或RemoteException实例。
+
+我们通常建议您在参数签名中尽可能具体，以减少根类型和原因异常类型之间不匹配的可能性。考虑将多重匹配方法分解为单独的@ExceptionHandler方法，每个方法均通过其签名匹配单个特定的异常类型。
+
+在多@ControllerAdvice安排中，我们建议在以相应顺序优先的@ControllerAdvice上声明您的主根异常映射。虽然根源异常匹配是原因的首选，但这是在给定控制器或@ControllerAdvice类的方法之间定义的。这意味着优先级较高的@ControllerAdvice Bean上的原因匹配优于优先级较低的@ControllerAdvice Bean上的任何匹配（例如，根）。
+
+最后但并非最不重要的一点是，@ExceptionHandler方法实现可以选择通过以原始形式重新抛出异常来退出处理给定异常实例。在仅对根级别匹配或无法静态确定的特定上下文中的匹配感兴趣的情况下，这很有用。重新抛出的异常会在其余的解析链中传播，就像给定的@ExceptionHandler方法最初不会匹配一样。
+
+Spring MVC中对@ExceptionHandler方法的支持建立在DispatcherServlet级别HandlerExceptionResolver机制上。
+
+**Method Arguments**
+
+@ExceptionHandler 方法支持以下参数：
+
+Method argument|Description
+-|-
+Exception type|用于访问引发的异常。
+HandlerMethod|用于访问引发异常的控制器方法。
+WebRequest， NativeWebRequest|对请求参数以及请求和会话属性的常规访问，而无需直接使用Servlet API。
+javax.servlet.ServletRequest， javax.servlet.ServletResponse|选择任何特定的请求或响应类型（例如ServletRequest或 HttpServletRequest或或Spring的MultipartRequest或MultipartHttpServletRequest）。
+javax.servlet.http.HttpSession|强制会话的存在。结果，这种论据永远不会null。请注意，会话访问不是线程安全的。考虑将RequestMappingHandlerAdapter实例的synchronizeOnSession标志设置 为true是否允许多个请求同时访问会话。
+java.security.Principal|当前经过身份验证的用户-可能是特定的Principal实现类（如果已知）。
+HttpMethod|请求的HTTP方法。
+java.util.Locale|当前请求的语言环境，由最具体的LocaleResolver可用语言决定，实际上是配置的LocaleResolver或LocaleContextResolver。
+java.util.TimeZone， java.time.ZoneId|与当前请求关联的时区，由决定LocaleContextResolver。
+java.io.OutputStream， java.io.Writer|用于访问原始响应主体（由Servlet API公开）。
+java.util.Map，org.springframework.ui.Model，org.springframework.ui.ModelMap|用于访问模型以进行错误响应。永远是空的。
+RedirectAttributes|指定在重定向的情况下使用的属性（要附加到查询字符串中），并指定要临时存储的属性，直到重定向后的请求为止。请参阅重定向属性和Flash属性。
+@SessionAttribute|与访问由于类级@SessionAttributes声明而存储在会话中的模型属性相反，用于访问任何会话属性。请参阅@SessionAttribute以获取更多详细信息。
+@RequestAttribute|用于访问请求属性。请参阅@RequestAttribute以获取更多详细信息。
+
+**返回值**
+
+@ExceptionHandler 方法支持以下返回值：
+
+返回值|描述
+-|-
+@ResponseBody|返回值通过HttpMessageConverter实例转换并写入响应。请参阅@ResponseBody。
+HttpEntity<B>， ResponseEntity<B>|返回值指定完整的响应（包括HTTP标头和正文）将通过HttpMessageConverter实例转换并写入响应。参见ResponseEntity。
+String|一个视图名称，将通过ViewResolver实现来解析，并与隐式模型一起使用-通过命令对象和@ModelAttribute方法确定。该处理程序方法还可以通过声明一个Model 参数（如前所述）以编程方式丰富模型。
+View|一个View实例，用于与隐式模型一起呈现（通过命令对象和@ModelAttribute方法确定）。 该处理程序方法还可以通过声明Model参数（如前所述）以编程方式丰富模型。
+java.util.Map， org.springframework.ui.Model|要添加到隐式模型的属性，其视图名称是通过隐式确定的RequestToViewNameTranslator。
+@ModelAttribute|要添加到模型的属性，其视图名称通过隐式确定RequestToViewNameTranslator。请注意，这@ModelAttribute是可选的。请参见表末尾的“其他任何返回值”。
+ModelAndView 宾语|要使用的视图和模型属性，以及响应状态（可选）。
+void|用的方法void返回类型（或null返回值）被认为已经完全处理的响应，如果它也具有ServletResponse一个OutputStream参数，或@ResponseStatus注释。如果控制器进行了肯定检查ETag或lastModified时间戳检查，则情况也是如此 （有关详细信息，请参阅控制器）。如果以上条件都不成立，则void返回类型还可以为REST控制器指示“无响应正文”，或者为HTML控制器指示默认视图名称选择。
+任何其他返回值|如果返回值与上述任何一个都不匹配并且不是简单类型（由BeanUtils＃isSimpleProperty确定 ），则默认情况下会将其视为要添加到模型的模型属性。如果是简单类型，则仍然无法解析。
+
+
+**REST API exceptions**
+
+REST服务的常见要求是在响应正文中包含错误详细信息。 Spring框架不会自动执行此操作，因为响应主体中错误详细信息的表示是特定于应用程序的。 但是，@ RestController可以将@ExceptionHandler方法与ResponseEntity返回值一起使用，以设置响应的状态和主体。 也可以在@ControllerAdvice类中声明此类方法，以将其全局应用。
+
+在响应主体中使用错误详细信息实现全局异常处理的应用程序应考虑扩展ResponseEntityExceptionHandler，它提供了Spring MVC引发的异常的处理并提供了自定义响应主体的钩子。 要使用此功能，请创建ResponseEntityExceptionHandler的子类，并使用@ControllerAdvice对其进行注释，重写必要的方法，并将其声明为Spring bean。
+
+## 1.3.7 Controller Advice
+
+通常，@ ExceptionHandler，@ InitBinder和@ModelAttribute方法在声明它们的@Controller类（或类层次结构）中应用。如果要使此类方法更全局地应用（跨控制器），则可以在标有@ControllerAdvice或@RestControllerAdvice的类中声明它们。
+
+@ControllerAdvice标有@Component，这意味着可以通过组件扫描将此类注册为Spring Bean。 @RestControllerAdvice还是一个标有@ControllerAdvice和@ResponseBody的元注释，这实际上意味着@ExceptionHandler方法通过消息转换（与视图分辨率或模板渲染）呈现到响应主体。
+
+在启动时，@RequestMapping和@ExceptionHandler方法的基础结构类检测@ControllerAdvice类型的Spring bean，然后在运行时应用其方法。全局@ExceptionHandler方法（来自@ControllerAdvice）在本地方法（来自@Controller）之后应用。相比之下，全局@ModelAttribute和@InitBinder方法在本地方法之前应用。
+
+默认情况下，@ ControllerAdvice方法适用于每个请求（即所有控制器），但是您可以通过使用批注上的属性将其范围缩小到控制器的子集，如以下示例所示：
+
+~~~java
+// Target all Controllers annotated with @RestController
+@ControllerAdvice(annotations = RestController.class)
+public class ExampleAdvice1 {}
+
+// Target all Controllers within specific packages
+@ControllerAdvice("org.example.controllers")
+public class ExampleAdvice2 {}
+
+// Target all Controllers assignable to specific classes
+@ControllerAdvice(assignableTypes = {ControllerInterface.class, AbstractController.class})
+public class ExampleAdvice3 {}
+~~~
+
+前面示例中的选择器在运行时进行评估，如果广泛使用，可能会对性能产生负面影响。 有关更多详细信息，请参见@ControllerAdvice javadoc。
+
+
+
+
+
+
+
 
 
 
