--- a/DataAccess/4.2ORM-Integration.md
+++ b/DataAccess/4.2ORM-Integration.md
@@ -38,4 +38,4 @@ public class ProductDaoImpl implements ProductDao {
 
 后处理器自动查找所有异常转换器（PersistenceExceptionTranslator接口的实现），并建议所有标有@Repository批注的bean，以便发现的转换器可以拦截适当的转换并将其应用于引发的异常。
 
-总之，您可以基于纯持久性技术的API和注释来实现DAO，同时仍可以从Spring管理的事务，依赖项注入和透明的异常转换（如果需要）到Spring的自定义异常层次结构中受益。
+总之，您可以基于纯持久性技术的API和注解来实现DAO，同时仍可以从Spring管理的事务，依赖项注入和透明的异常转换（如果需要）到Spring的自定义异常层次结构中受益。
