--- a/DataAccess/5.Object-XML-Mappers.md
+++ b/DataAccess/5.Object-XML-Mappers.md
@@ -185,7 +185,7 @@ castor-marshaller
 
 ## 5.5 JAXB
 
-JAXB绑定编译器将W3C XML Schema转换为一个或多个Java类，一个jaxb.properties文件以及可能的一些资源文件。 JAXB还提供了一种从带注释的Java类生成模式的方法。
+JAXB绑定编译器将W3C XML Schema转换为一个或多个Java类，一个jaxb.properties文件以及可能的一些资源文件。 JAXB还提供了一种从带注解的Java类生成模式的方法。
 
 遵循Marshaller和Unmarshaller中描述的Marshaller和Unmarshaller接口，Spring支持JAXB 2.0 API作为XML编组策略。相应的集成类位于org.springframework.oxm.jaxb包中。
 
