--- a/WebReactive/1.11WebFlux-Config.md
+++ b/WebReactive/1.11WebFlux-Config.md
@@ -1,6 +1,6 @@
 # 1.11 WebFlux Config
 
-WebFlux Java配置声明使用带注释的控制器或功能端点来声明处理请求所必需的组件，并且它提供了用于自定义配置的API。 这意味着您不需要了解Java配置创建的基础bean。 但是，如果您想了解它们，则可以在WebFluxConfigurationSupport中查看它们，或阅读有关特殊Bean类型中的内容的更多信息。
+WebFlux Java配置声明使用带注解的控制器或功能端点来声明处理请求所必需的组件，并且它提供了用于自定义配置的API。 这意味着您不需要了解Java配置创建的基础bean。 但是，如果您想了解它们，则可以在WebFluxConfigurationSupport中查看它们，或阅读有关特殊Bean类型中的内容的更多信息。
 
 对于配置API中没有的更高级的自定义设置，您可以通过“高级配置模式”完全控制配置。
 
