--- a/WebReactive/1.4Annotated-Controllers.md
+++ b/WebReactive/1.4Annotated-Controllers.md
@@ -1,6 +1,6 @@
 # 1.4 Annotated Controllers
 
-Spring WebFlux提供了一个基于注释的编程模型，其中@Controller和@RestController组件使用注释来表达请求映射，请求输入，处理异常等。 带注释的控制器具有灵活的方法签名，无需扩展基类或实现特定的接口。
+Spring WebFlux提供了一个基于注解的编程模型，其中@Controller和@RestController组件使用注解来表达请求映射，请求输入，处理异常等。 带注解的控制器具有灵活的方法签名，无需扩展基类或实现特定的接口。
 
 以下清单显示了一个基本示例：
 
@@ -17,7 +17,7 @@ public class HelloController {
 
 ## 1.4.1 @Controller
 
-您可以使用标准的Spring bean定义来定义控制器bean。 @Controller构造型允许自动检测，并且与Spring常规支持保持一致，以支持在类路径中检测@Component类并为其自动注册Bean定义。 它还充当带注释类的构造型，表明其作为Web组件的作用。
+您可以使用标准的Spring bean定义来定义控制器bean。 @Controller构造型允许自动检测，并且与Spring常规支持保持一致，以支持在类路径中检测@Component类并为其自动注册Bean定义。 它还充当带注解类的构造型，表明其作为Web组件的作用。
 
 要启用对此类@Controller bean的自动检测，可以将组件扫描添加到Java配置中，如以下示例所示：
 
@@ -30,7 +30,7 @@ public class WebConfig {
 }
 ~~~
 
-@RestController是一个组合式注释，其本身使用@Controller和@ResponseBody进行了元注释，表示一个控制器，其每个方法都继承了类型级别的@ResponseBody注释，因此直接将其写入响应主体（与视图分辨率相对）并使用 HTML模板。
+@RestController是一个组合式注解，其本身使用@Controller和@ResponseBody进行了元注解，表示一个控制器，其每个方法都继承了类型级别的@ResponseBody注解，因此直接将其写入响应主体（与视图分辨率相对）并使用 HTML模板。
 
 ## 1.4.2 Request Mapping
 
@@ -48,7 +48,7 @@ public class WebConfig {
 
 * @PatchMapping
 
-快捷方式是提供的“自定义注释”，因为可以说，大多数控制器方法应该映射到特定的HTTP方法，而不是使用@RequestMapping，后者默认情况下与所有HTTP方法匹配。 同时，在类级别仍需要@RequestMapping来表示共享映射。
+快捷方式是提供的“自定义注解”，因为可以说，大多数控制器方法应该映射到特定的HTTP方法，而不是使用@RequestMapping，后者默认情况下与所有HTTP方法匹配。 同时，在类级别仍需要@RequestMapping来表示共享映射。
 
 以下示例具有类型和方法级别的映射：
 
@@ -201,9 +201,9 @@ public void findPet(@PathVariable String petId) {
 
 **Custom Annotations**
 
-Spring MVC支持将组合注释用于请求映射。 这些注解本身使用@RequestMapping进行元注解，并且旨在以更狭窄，更具体的用途重新声明@RequestMapping属性的子集（或全部）。
+Spring MVC支持将组合注解用于请求映射。 这些注解本身使用@RequestMapping进行元注解，并且旨在以更狭窄，更具体的用途重新声明@RequestMapping属性的子集（或全部）。
 
-@ GetMapping，@ PostMapping，@ PutMapping，@ DeleteMapping和@PatchMapping是组合注释的示例。 之所以提供它们，是因为可以说，大多数控制器方法应该映射到特定的HTTP方法，而不是使用@RequestMapping，后者默认情况下与所有HTTP方法都匹配。 如果需要组合注释的示例，请查看如何声明它们。
+@ GetMapping，@ PostMapping，@ PutMapping，@ DeleteMapping和@PatchMapping是组合注解的示例。 之所以提供它们，是因为可以说，大多数控制器方法应该映射到特定的HTTP方法，而不是使用@RequestMapping，后者默认情况下与所有HTTP方法都匹配。 如果需要组合注解的示例，请查看如何声明它们。
 
 Spring MVC还支持带有自定义请求匹配逻辑的自定义请求映射属性。 这是一个更高级的选项，它需要子类化RequestMappingHandlerMapping并覆盖getCustomMethodCondition方法，您可以在其中检查自定义属性并返回自己的RequestCondition。
 
@@ -238,7 +238,7 @@ public class MyConfig {
 
 下表描述了受支持的控制器方法参数。 任何参数均不支持反应性类型。
 
-支持JDK 8的java.util.Optional作为方法参数，并与具有必需属性（例如，@ RequestParam，@ RequestHeader等）的注释结合在一起，等效于required = false。
+支持JDK 8的java.util.Optional作为方法参数，并与具有必需属性（例如，@ RequestParam，@ RequestHeader等）的注解结合在一起，等效于required = false。
 
 
 Controller method argument|Description
@@ -265,7 +265,7 @@ java.util.Map, org.springframework.ui.Model, org.springframework.ui.ModelMap|用
 RedirectAttributes|指定在重定向的情况下使用的属性（即追加到查询字符串中），并指定要临时存储的属性，直到重定向后的请求为止。 请参阅重定向属性和Flash属性。
 @ModelAttribute|用于访问模型中的现有属性（如果不存在，则进行实例化），并应用数据绑定和验证。 请参阅@ModelAttribute以及Model和DataBinder。请注意，@ ModelAttribute的使用是可选的（例如，设置其属性）。 请参阅此表末尾的“其他任何参数”。
 Errors, BindingResult|用于访问来自命令对象的验证和数据绑定（即，@ ModelAttribute参数）的错误或来自@RequestBody或@RequestPart参数的验证的错误。 您必须在经过验证的方法参数后立即声明一个Errors或BindingResult参数。
-SessionStatus + class-level @SessionAttributes|为了标记表单处理完成，将触发清除通过类级别@SessionAttributes注释声明的会话属性。 有关更多详细信息，请参见@SessionAttributes。
+SessionStatus + class-level @SessionAttributes|为了标记表单处理完成，将触发清除通过类级别@SessionAttributes注解声明的会话属性。 有关更多详细信息，请参见@SessionAttributes。
 UriComponentsBuilder|用于准备相对于当前请求的主机，端口，方案，上下文路径以及servlet映射的文字部分的URL。 请参阅URI链接。
 @SessionAttribute|对于访问任何会话属性，与由于类级@SessionAttributes声明而存储在会话中的模型属性相反。 有关更多详细信息，请参见@SessionAttribute。
 @RequestAttribute|用于访问请求属性。 有关更多详细信息，请参见@RequestAttribute。
@@ -296,7 +296,7 @@ Any other return value|如果返回值不是由BeanUtils确定的简单类型，
 
 **Type Conversion**
 
-如果参数声明为String以外的形式，则某些表示基于String的请求输入的带注释的控制器方法参数（例如@ RequestParam，@ RequestHeader，@ PathVariable，@ MatrixVariable和@CookieValue）可能需要类型转换。
+如果参数声明为String以外的形式，则某些表示基于String的请求输入的带注解的控制器方法参数（例如@ RequestParam，@ RequestHeader，@ PathVariable，@ MatrixVariable和@CookieValue）可能需要类型转换。
 
 在这种情况下，将根据配置的转换器自动应用类型转换。 默认情况下，支持简单类型（int，long，Date和其他）。 您可以通过WebDataBinder（请参见DataBinder）或通过在FormattingConversionService中注册Formatter来自定义类型转换。 参见Spring字段格式。
 
@@ -396,7 +396,7 @@ public class EditPetForm {
 
 如果将@RequestParam批注声明为Map &lt;String，String>或MultiValueMap &lt;String，String>，但未在批注中指定参数名称，则将使用每个给定参数名称的请求参数值填充映射。
 
-请注意，@ RequestParam的使用是可选的（例如，设置其属性）。默认情况下，任何简单值类型的参数（由BeanUtils＃isSimpleProperty确定）并且没有被任何其他参数解析器解析，就如同使用@RequestParam进行了注释一样。
+请注意，@ RequestParam的使用是可选的（例如，设置其属性）。默认情况下，任何简单值类型的参数（由BeanUtils＃isSimpleProperty确定）并且没有被任何其他参数解析器解析，就如同使用@RequestParam进行了注解一样。
 
 **@RequestHeader**
 
@@ -428,7 +428,7 @@ public void handle(
 
 在Map &lt;String，String>，MultiValueMap &lt;String，String>或HttpHeaders参数上使用@RequestHeader批注时，将使用所有标头值填充该映射。
 
->内置支持可用于将逗号分隔的字符串转换为数组或字符串集合或类型转换系统已知的其他类型。 例如，用@RequestHeader（“ Accept”）注释的方法参数可以是String类型，也可以是String []或List &lt;String>。
+>内置支持可用于将逗号分隔的字符串转换为数组或字符串集合或类型转换系统已知的其他类型。 例如，用@RequestHeader（“ Accept”）注解的方法参数可以是String类型，也可以是String []或List &lt;String>。
 
 **@CookieValue**
 
@@ -513,7 +513,7 @@ public String update(@Valid AccountForm form, BindingResult result,
 }
 ~~~
 
-您可以通过添加javax.validation.Valid注释或Spring的@Validated注释（Bean验证和Spring验证）自动在数据绑定后应用验证。 以下示例显示了如何执行此操作：
+您可以通过添加javax.validation.Valid注解或Spring的@Validated注解（Bean验证和Spring验证）自动在数据绑定后应用验证。 以下示例显示了如何执行此操作：
 
 ~~~java
 @PostMapping("/owners/{ownerId}/pets/{petId}/edit")
@@ -525,11 +525,11 @@ public String processSubmit(@Valid @ModelAttribute("pet") Pet pet, BindingResult
 }
 ~~~
 
-请注意，使用@ModelAttribute是可选的（例如，设置其属性）。 默认情况下，任何不是简单值类型（由BeanUtils＃isSimpleProperty确定）且未被其他任何参数解析器解析的参数都将被视为使用@ModelAttribute注释。
+请注意，使用@ModelAttribute是可选的（例如，设置其属性）。 默认情况下，任何不是简单值类型（由BeanUtils＃isSimpleProperty确定）且未被其他任何参数解析器解析的参数都将被视为使用@ModelAttribute注解。
 
 **@SessionAttributes**
 
-@SessionAttributes用于在请求之间的HTTP Servlet会话中存储模型属性。 它是类型级别的注释，用于声明特定控制器使用的会话属性。 这通常列出应透明地存储在会话中以供后续访问请求的模型属性的名称或模型属性的类型。
+@SessionAttributes用于在请求之间的HTTP Servlet会话中存储模型属性。 它是类型级别的注解，用于声明特定控制器使用的会话属性。 这通常列出应透明地存储在会话中以供后续访问请求的模型属性的名称或模型属性的类型。
 
 以下示例使用@SessionAttributes批注：
 
@@ -564,7 +564,7 @@ public class EditPetForm {
 
 **@SessionAttribute**
 
-如果您需要访问全局存在（例如，在控制器外部（例如，通过过滤器）管理）并且可能存在或可能不存在的预先存在的会话属性，则可以在方法参数上使用@SessionAttribute注释，例如 以下示例显示：
+如果您需要访问全局存在（例如，在控制器外部（例如，通过过滤器）管理）并且可能存在或可能不存在的预先存在的会话属性，则可以在方法参数上使用@SessionAttribute注解，例如 以下示例显示：
 
 ~~~java
 @RequestMapping("/")
@@ -592,7 +592,7 @@ public String handle(@RequestAttribute Client client) {
 
 默认情况下，所有模型属性均被视为在重定向URL中作为URI模板变量公开。在其余属性中，那些属于原始类型或原始类型的集合或数组的属性会自动附加为查询参数。
 
-如果专门为重定向准备了模型实例，则将原始类型属性作为查询参数附加可能是理想的结果。但是，在带注释的控制器中，模型可以包含为渲染目的添加的其他属性（例如，下拉字段值）。为避免此类属性出现在URL中的可能性，@ RequestMapping方法可以声明RedirectAttributes类型的参数，并使用它指定可用于RedirectView的确切属性。如果该方法确实重定向，则使用RedirectAttributes的内容。否则，将使用模型的内容。
+如果专门为重定向准备了模型实例，则将原始类型属性作为查询参数附加可能是理想的结果。但是，在带注解的控制器中，模型可以包含为渲染目的添加的其他属性（例如，下拉字段值）。为避免此类属性出现在URL中的可能性，@ RequestMapping方法可以声明RedirectAttributes类型的参数，并使用它指定可用于RedirectView的确切属性。如果该方法确实重定向，则使用RedirectAttributes的内容。否则，将使用模型的内容。
 
 RequestMappingHandlerAdapter提供了一个名为ignoreDefaultModelOnRedirect的标志，您可以使用该标志指示如果控制器方法重定向，则绝不要使用默认Model的内容。相反，控制器方法应声明一个RedirectAttributes类型的属性，或者，如果没有这样做，则不应将任何属性传递给RedirectView。 MVC名称空间和MVC Java配置都将此标志设置为false，以保持向后兼容性。但是，对于新应用程序，我们建议将其设置为true。
 
@@ -616,7 +616,7 @@ Spring MVC有两个主要的抽象来支持Flash属性。 FlashMap用于保存Fl
 
 Flash属性支持始终处于“打开”状态，无需显式启用。但是，如果不使用它，则永远不会导致HTTP会话创建。在每个请求上，都有一个“输入” FlashMap，其属性是从上一个请求（如果有）传递过来的，而“输出” FlashMap的属性是为后续请求保存的。可以通过RequestContextUtils中的静态方法从Spring MVC中的任何位置访问这两个FlashMap实例。
 
-带注释的控制器通常不需要直接使用FlashMap。相反，@ RequestMapping方法可以接受RedirectAttributes类型的参数，并使用它为重定向方案添加Flash属性。通过RedirectAttributes添加的Flash属性会自动传播到“输出” FlashMap。同样，重定向后，来自“输入” FlashMap的属性会自动添加到服务于目标URL的控制器的模型中。
+带注解的控制器通常不需要直接使用FlashMap。相反，@ RequestMapping方法可以接受RedirectAttributes类型的参数，并使用它为重定向方案添加Flash属性。通过RedirectAttributes添加的Flash属性会自动传播到“输出” FlashMap。同样，重定向后，来自“输入” FlashMap的属性会自动添加到服务于目标URL的控制器的模型中。
 
 >将请求与Flash属性匹配
 >Flash属性的概念存在于许多其他Web框架中，并已证明有时会遇到并发问题。 这是因为根据定义，闪存属性将存储到下一个请求。 但是，“下一个”请求可能不是预期的接收者，而是另一个异步请求（例如，轮询或资源请求），在这种情况下，过早删除了闪存属性。
@@ -711,7 +711,7 @@ public String handle(@RequestPart("meta-data") MetaData metadata,
 }
 ~~~
 
-您可以将@RequestPart与javax.validation.Valid结合使用，也可以使用Spring的@Validated注释，这两种注释都会导致应用标准Bean验证。 默认情况下，验证错误会导致MethodArgumentNotValidException，并将其转换为400（BAD_REQUEST）响应。 另外，您可以通过Errors或BindingResult参数在控制器内本地处理验证错误，如以下示例所示：
+您可以将@RequestPart与javax.validation.Valid结合使用，也可以使用Spring的@Validated注解，这两种注解都会导致应用标准Bean验证。 默认情况下，验证错误会导致MethodArgumentNotValidException，并将其转换为400（BAD_REQUEST）响应。 另外，您可以通过Errors或BindingResult参数在控制器内本地处理验证错误，如以下示例所示：
 
 ~~~java
 @PostMapping("/")
@@ -734,7 +734,7 @@ public void handle(@RequestBody Account account) {
 
 您可以使用MVC Config的“消息转换器”选项来配置或自定义消息转换。
 
-您可以将@RequestBody与javax.validation.Valid或Spring的@Validated注释结合使用，这两种注释都会导致应用标准Bean验证。 默认情况下，验证错误会导致MethodArgumentNotValidException，并将其转换为400（BAD_REQUEST）响应。 另外，您可以通过Errors或BindingResult参数在控制器内本地处理验证错误，如以下示例所示：
+您可以将@RequestBody与javax.validation.Valid或Spring的@Validated注解结合使用，这两种注解都会导致应用标准Bean验证。 默认情况下，验证错误会导致MethodArgumentNotValidException，并将其转换为400（BAD_REQUEST）响应。 另外，您可以通过Errors或BindingResult参数在控制器内本地处理验证错误，如以下示例所示：
 
 ~~~java
 @PostMapping("/accounts")
@@ -766,7 +766,7 @@ public Account handle() {
 }
 ~~~
 
-在类级别也支持@ResponseBody，在这种情况下，所有控制器方法都将继承它。 这就是@RestController的效果，它只不过是带有@Controller和@ResponseBody标记的元注释。
+在类级别也支持@ResponseBody，在这种情况下，所有控制器方法都将继承它。 这就是@RestController的效果，它只不过是带有@Controller和@ResponseBody标记的元注解。
 
 您可以将@ResponseBody与反应类型一起使用。 有关更多详细信息，请参见异步请求和响应类型。
 
@@ -857,7 +857,7 @@ public class UserController extends AbstractController {
 
 * 在@RequestMapping方法中的方法参数上，可从模型创建或访问对象，并将其通过WebDataBinder绑定到请求。
 
-* 作为@Controller或@ControllerAdvice类中的方法级注释，可在任何@RequestMapping方法调用之前帮助初始化模型。
+* 作为@Controller或@ControllerAdvice类中的方法级注解，可在任何@RequestMapping方法调用之前帮助初始化模型。
 
 * 在@RequestMapping方法上标记其返回值的是模型属性。
 
@@ -903,7 +903,7 @@ public String handle(@ModelAttribute Account account, BindingResult errors) {
 
 另外，任何具有反应性类型包装器的模型属性都将在视图渲染之前解析为其实际值（并更新了模型）。
 
-您也可以将@ModelAttribute用作@RequestMapping方法上的方法级注释，在这种情况下，@ RequestMapping方法的返回值将解释为模型属性。 通常不需要这样做，因为它是HTML控制器的默认行为，除非返回值是一个String，否则它将被解释为视图名称。 @ModelAttribute还可以帮助自定义模型属性名称，如以下示例所示：
+您也可以将@ModelAttribute用作@RequestMapping方法上的方法级注解，在这种情况下，@ RequestMapping方法的返回值将解释为模型属性。 通常不需要这样做，因为它是HTML控制器的默认行为，除非返回值是一个String，否则它将被解释为视图名称。 @ModelAttribute还可以帮助自定义模型属性名称，如以下示例所示：
 
 ~~~java
 @GetMapping("/accounts/{id}")
@@ -977,7 +977,7 @@ public class SimpleController {
 
 该异常可以与正在传播的顶级异常（即，直接IOException被抛出）匹配，也可以与顶级包装器异常（例如，包装在IllegalStateException内部的IOException）内的直接原因匹配。
 
-对于匹配的异常类型，最好将目标异常声明为方法参数，如前面的示例所示。或者，注释声明可以缩小异常类型以使其匹配。我们通常建议在参数签名中尽可能具体，并在以相应顺序优先的@ControllerAdvice上声明您的主根异常映射。有关详细信息，请参见MVC部分。
+对于匹配的异常类型，最好将目标异常声明为方法参数，如前面的示例所示。或者，注解声明可以缩小异常类型以使其匹配。我们通常建议在参数签名中尽可能具体，并在以相应顺序优先的@ControllerAdvice上声明您的主根异常映射。有关详细信息，请参见MVC部分。
 
 >WebFlux中的@ExceptionHandler方法支持与@RequestMapping方法相同的方法参数和返回值，但与请求正文和@ModelAttribute相关的方法参数除外。
 
@@ -993,7 +993,7 @@ REST服务的常见要求是在响应正文中包含错误详细信息。 Spring
 
 通常，@ ExceptionHandler，@ InitBinder和@ModelAttribute方法在声明它们的@Controller类（或类层次结构）中应用。如果要使此类方法更全局地应用（跨控制器），则可以在标有@ControllerAdvice或@RestControllerAdvice的类中声明它们。
 
-@ControllerAdvice标有@Component，这意味着可以通过组件扫描将此类注册为Spring Bean。 @RestControllerAdvice还是一个标有@ControllerAdvice和@ResponseBody的元注释，这实际上意味着@ExceptionHandler方法通过消息转换（与视图分辨率或模板渲染）呈现到响应主体。
+@ControllerAdvice标有@Component，这意味着可以通过组件扫描将此类注册为Spring Bean。 @RestControllerAdvice还是一个标有@ControllerAdvice和@ResponseBody的元注解，这实际上意味着@ExceptionHandler方法通过消息转换（与视图分辨率或模板渲染）呈现到响应主体。
 
 在启动时，@RequestMapping和@ExceptionHandler方法的基础结构类检测@ControllerAdvice类型的Spring bean，然后在运行时应用其方法。全局@ExceptionHandler方法（来自@ControllerAdvice）在本地方法（来自@Controller）之后应用。相比之下，全局@ModelAttribute和@InitBinder方法在本地方法之前应用。
 
