--- a/WebServlet/1.2Filters.md
+++ b/WebServlet/1.2Filters.md
@@ -36,7 +36,7 @@ ShallowEtagHeaderFilter筛选器通过缓存写入响应的内容并从中计算
 
 ## 1.2.4 CORS
 
-Spring MVC通过控制器上的注释为CORS配置提供了细粒度的支持。 但是，当与Spring Security一起使用时，我们建议您依赖内置的CorsFilter，该内置CorsFilter必须在Spring Security的过滤器链之前订购。
+Spring MVC通过控制器上的注解为CORS配置提供了细粒度的支持。 但是，当与Spring Security一起使用时，我们建议您依赖内置的CorsFilter，该内置CorsFilter必须在Spring Security的过滤器链之前订购。
 
 
 
