--- a/WebServlet/1.4URI-Links.md
+++ b/WebServlet/1.4URI-Links.md
@@ -244,7 +244,7 @@ URI uri = uriComponents.encode().toUri();
 
 ## 1.4.6 Links in Views
 
-在Thymeleaf，FreeMarker或JSP之类的视图中，您可以通过引用每个请求映射的隐式或显式分配的名称来构建到带注释的控制器的链接。
+在Thymeleaf，FreeMarker或JSP之类的视图中，您可以通过引用每个请求映射的隐式或显式分配的名称来构建到带注解的控制器的链接。
 
 考虑以下示例：
 
