--- a/WebServlet/1.5Asynchronous-Requests.md
+++ b/WebServlet/1.5Asynchronous-Requests.md
@@ -161,7 +161,7 @@ emitter.complete();
 
 虽然SSE是流式传输到浏览器的主要选项，但请注意Internet Explorer不支持服务器发送事件。 考虑将Spring的WebSocket消息与针对广泛浏览器的SockJS后备传输（包括SSE）结合使用。
 
-另请参阅上一节以获取有关异常处理的注释。
+另请参阅上一节以获取有关异常处理的注解。
 
 **Raw Data**
 
