--- a/WebServlet/1.6CORS.md
+++ b/WebServlet/1.6CORS.md
@@ -18,13 +18,13 @@ Spring MVC HandlerMapping实现为CORS提供内置支持。成功将请求映射
 
 可以使用基于URL模式的CorsConfiguration映射分别配置每个HandlerMapping。在大多数情况下，应用程序使用MVC Java配置或XML名称空间声明此类映射，这导致将单个全局映射传递给所有HandlerMappping实例。
 
-您可以将HandlerMapping级别的全局CORS配置与更细粒度的处理程序级别的CORS配置结合使用。例如，带注释的控制器可以使用类或方法级别的@CrossOrigin注释（其他处理程序可以实现CorsConfigurationSource）。
+您可以将HandlerMapping级别的全局CORS配置与更细粒度的处理程序级别的CORS配置结合使用。例如，带注解的控制器可以使用类或方法级别的@CrossOrigin注解（其他处理程序可以实现CorsConfigurationSource）。
 
 全局和本地配置组合的规则通常是相加的，例如，所有全局和所有本地起源。对于只能接受单个值的那些属性（例如allowCredentials和maxAge），局部属性将覆盖全局值。有关更多详细信息，请参见CorsConfiguration＃combine（CorsConfiguration）。
 
 ## 1.6.3 @CrossOrigin
 
-@CrossOrigin批注启用带注释的控制器方法上的跨域请求，如以下示例所示：
+@CrossOrigin批注启用带注解的控制器方法上的跨域请求，如以下示例所示：
 
 ~~~java
 @RestController
