--- a/WebServlet/3.Testing.md
+++ b/WebServlet/3.Testing.md
@@ -6,7 +6,7 @@
 
 * TestContext Framework：支持在JUnit和TestNG测试中加载Spring配置，包括跨测试方法高效地缓存已加载的配置，并支持通过MockServletContext加载WebApplicationContext。有关更多详细信息，请参见TestContext Framework。
 
-* Spring MVC测试：一种框架，也称为MockMvc，用于通过DispatcherServlet（即支持注释）测试带注释的控制器，该框架具有Spring MVC基础结构，但没有HTTP服务器。有关更多详细信息，请参见Spring MVC Test。
+* Spring MVC测试：一种框架，也称为MockMvc，用于通过DispatcherServlet（即支持注解）测试带注解的控制器，该框架具有Spring MVC基础结构，但没有HTTP服务器。有关更多详细信息，请参见Spring MVC Test。
 
 * 客户端REST：spring-test提供了一个MockRestServiceServer，您可以将其用作模拟服务器，以测试内部使用RestTemplate的客户端代码。有关更多详细信息，请参见客户端REST测试。
 
