--- a/WebServlet/4.4STOMP.md
+++ b/WebServlet/4.4STOMP.md
@@ -206,9 +206,9 @@ Java配置（即@EnableWebSocketMessageBroker）和XML名称空间配置（即&l
 
 前面两个图之间的主要区别是使用“代理中继”将消息通过TCP传递到外部STOMP代理，以及将消息从代理向下传递给订阅的客户端。
 
-当从WebSocket连接接收到消息时，消息将被解码为STOMP帧，转换为Spring消息表示形式，然后发送到clientInboundChannel进行进一步处理。例如，目标标头以/ app开头的STOMP消息可以路由到带注释的控制器中的@MessageMapping方法，而/ topic和/ queue消息可以直接路由到消息代理。
+当从WebSocket连接接收到消息时，消息将被解码为STOMP帧，转换为Spring消息表示形式，然后发送到clientInboundChannel进行进一步处理。例如，目标标头以/ app开头的STOMP消息可以路由到带注解的控制器中的@MessageMapping方法，而/ topic和/ queue消息可以直接路由到消息代理。
 
-处理来自客户端的STOMP消息的带注释的@Controller可以通过brokerChannel将消息发送到消息代理，并且代理通过clientOutboundChannel将消息广播给匹配的订户。相同的控制器还可以响应HTTP请求执行相同的操作，因此客户端可以执行HTTP POST，然后@PostMapping方法可以将消息发送到消息代理，以广播到订阅的客户端。
+处理来自客户端的STOMP消息的带注解的@Controller可以通过brokerChannel将消息发送到消息代理，并且代理通过clientOutboundChannel将消息广播给匹配的订户。相同的控制器还可以响应HTTP请求执行相同的操作，因此客户端可以执行HTTP POST，然后@PostMapping方法可以将消息发送到消息代理，以广播到订阅的客户端。
 
 我们可以通过一个简单的示例跟踪流程。考虑以下示例，该示例设置了服务器：
 
@@ -245,17 +245,17 @@ public class GreetingController {
 
 * 客户端发送SUBSCRIBE帧，其目标标头为/ topic / greeting。接收并解码后，该消息将发送到clientInboundChannel，然后路由到消息代理，该代理存储客户端订阅。
 
-* 客户端向/ app / greeting发送一个aSEND帧。 / app前缀有助于将其路由到带注释的控制器。删除/ app前缀后，目标的其余/ greeting部分将映射到GreetingController中的@MessageMapping方法。
+* 客户端向/ app / greeting发送一个aSEND帧。 / app前缀有助于将其路由到带注解的控制器。删除/ app前缀后，目标的其余/ greeting部分将映射到GreetingController中的@MessageMapping方法。
 
 * 从GreetingController返回的值将根据返回值和/ topic / greeting的默认目标标头（从输入目标使用/ app替换为/ topic的情况下）转换为带有有效负载的Spring消息。结果消息将发送到brokerChannel并由消息代理处理。
 
 * 消息代理找到所有匹配的订户，并通过clientOutboundChannel向每个发送一个MESSAGE帧，消息从此处被编码为STOMP帧并通过WebSocket连接发送。
 
-下一节将提供有关带注释方法的更多详细信息，包括支持的参数类型和返回值。
+下一节将提供有关带注解方法的更多详细信息，包括支持的参数类型和返回值。
 
 ## 4.4.6 Annotated Controllers
 
-应用程序可以使用带注释的@Controller类来处理来自客户端的消息。 这样的类可以声明@ MessageMapping，@ SubscribeMapping和@ExceptionHandler方法，如以下主题所述：
+应用程序可以使用带注解的@Controller类来处理来自客户端的消息。 这样的类可以声明@ MessageMapping，@ SubscribeMapping和@ExceptionHandler方法，如以下主题所述：
 
 * @MessageMapping
 
@@ -264,7 +264,7 @@ public class GreetingController {
 * @MessageExceptionHandler
 
 * @MessageMapping
-您可以使用@MessageMapping注释根据消息的目的地路由消息的方法。 在方法级别和类型级别都支持它。 在类型级别，@MessageMapping用于表示控制器中所有方法之间的共享映射。
+您可以使用@MessageMapping注解根据消息的目的地路由消息的方法。 在方法级别和类型级别都支持它。 在类型级别，@MessageMapping用于表示控制器中所有方法之间的共享映射。
 
 默认情况下，映射值是Ant样式的路径模式（例如/ thing *，/ thing / **），包括对模板变量的支持（例如/ thing / {id}）。 可以通过@DestinationVariable方法参数引用这些值。 应用程序还可以切换到以点分隔的映射的目标约定，如“作为分隔符的点”中所述。
 
@@ -277,7 +277,7 @@ Method argument|Description
 Message|用于访问完整的消息。
 MessageHeaders|用于访问中的标头Message。
 MessageHeaderAccessor，SimpMessageHeaderAccessor和StompHeaderAccessor|用于通过类型化访问器方法访问标头。
-@Payload|为了访问消息的有效负载，由configure转换（例如，从JSON转换） MessageConverter。不需要此注释，因为默认情况下会假定没有其他自变量匹配。您可以使用@javax.validation.Valid或Spring的注释有效负载参数@Validated，以使有效负载参数被自动验证。
+@Payload|为了访问消息的有效负载，由configure转换（例如，从JSON转换） MessageConverter。不需要此注解，因为默认情况下会假定没有其他自变量匹配。您可以使用@javax.validation.Valid或Spring的注解有效负载参数@Validated，以使有效负载参数被自动验证。
 @Header|用于访问特定的标头值- org.springframework.core.convert.converter.Converter如有必要，还可以使用进行类型转换 。
 @Headers|用于访问消息中的所有标题。此参数必须可分配给 java.util.Map。
 @DestinationVariable|用于访问从消息目标中提取的模板变量。根据需要将值转换为声明的方法参数类型。
@@ -620,7 +620,7 @@ public class MyConfig implements WebSocketMessageBrokerConfigurer {
 
 应用程序可以发送针对特定用户的消息，并且Spring的STOMP支持可以识别以/ user /为前缀的目标。例如，客户端可能订阅了/ user / queue / position-updates目标。该目标由UserDestinationMessageHandler处理，并转换为用户会话唯一的目标（例如/ queue / position-updates-user123）。这提供了订阅通用命名目的地的便利，同时确保与预订同一目的地的其他用户不发生冲突，以便每个用户都可以接收唯一的库存头寸更新。
 
-在发送方，可以将消息发送到一个目的地，例如/ user / {username} / queue / position-updates，然后由UserDestinationMessageHandler将其转换为一个或多个目的地，每个与该用户关联的会话一个目的地。这使应用程序中的任何组件都可以发送针对特定用户的消息，而不必知道他们的姓名和通用目的地。注释和消息传递模板也支持此功能。
+在发送方，可以将消息发送到一个目的地，例如/ user / {username} / queue / position-updates，然后由UserDestinationMessageHandler将其转换为一个或多个目的地，每个与该用户关联的会话一个目的地。这使应用程序中的任何组件都可以发送针对特定用户的消息，而不必知道他们的姓名和通用目的地。注解和消息传递模板也支持此功能。
 
 消息处理方法可以通过@SendToUser批注将消息发送给与正在处理的消息相关联的用户（在类级别上也支持共享公共目标），如以下示例所示：
 
@@ -907,7 +907,7 @@ public class MyController {
 
 最明显的开始是配置支持clientInboundChannel和clientOutboundChannel的线程池。默认情况下，两者都配置为可用处理器数量的两倍。
 
-如果带注释的方法中的消息处理主要是受CPU限制的，则clientInboundChannel的线程数应保持接近处理器数。如果他们所做的工作更多地受到IO限制，并且需要阻塞或等待数据库或其他外部系统，则可能需要增加线程池大小。
+如果带注解的方法中的消息处理主要是受CPU限制的，则clientInboundChannel的线程数应保持接近处理器数。如果他们所做的工作更多地受到IO限制，并且需要阻塞或等待数据库或其他外部系统，则可能需要增加线程池大小。
 
 >ThreadPoolExecutor具有三个重要属性：核心线程池大小，最大线程池大小，以及队列存储没有可用线程的任务的容量。
 
@@ -1003,13 +1003,13 @@ public class WebSocketConfig implements WebSocketMessageBrokerConfigurer {
 
 ## 4.4.22 Testing
 
-使用Spring的STOMP-over-WebSocket支持时，有两种主要的方法来测试应用程序。首先是编写服务器端测试以验证控制器的功能及其带注释的消息处理方法。第二个是编写涉及运行客户端和服务器的完整的端到端测试。
+使用Spring的STOMP-over-WebSocket支持时，有两种主要的方法来测试应用程序。首先是编写服务器端测试以验证控制器的功能及其带注解的消息处理方法。第二个是编写涉及运行客户端和服务器的完整的端到端测试。
 
 两种方法不是互斥的。相反，每个人在整体测试策略中都有自己的位置。服务器端测试更加集中，更易于编写和维护。另一方面，端到端集成测试更完整，测试更多，但编写和维护也更加复杂。
 
-服务器端测试的最简单形式是编写控制器单元测试。但是，这还不够有用，因为控制器所做的很多事情都取决于其注释。纯单元测试根本无法测试。
+服务器端测试的最简单形式是编写控制器单元测试。但是，这还不够有用，因为控制器所做的很多事情都取决于其注解。纯单元测试根本无法测试。
 
-理想情况下，应该像在运行时那样调用被测控制器，就像使用Spring MVC Test框架测试处理HTTP请求的控制器的方法一样，即不运行Servlet容器而是依靠Spring框架来调用被测控制器。带注释的控制器。与Spring MVC Test一样，您有两种可能的选择，要么使用“基于上下文的”设置，要么使用“独立的”设置：
+理想情况下，应该像在运行时那样调用被测控制器，就像使用Spring MVC Test框架测试处理HTTP请求的控制器的方法一样，即不运行Servlet容器而是依靠Spring框架来调用被测控制器。带注解的控制器。与Spring MVC Test一样，您有两种可能的选择，要么使用“基于上下文的”设置，要么使用“独立的”设置：
 
 * 在Spring TestContext框架的帮助下加载实际的Spring配置，将clientInboundChannel注入为测试字段，并使用它发送消息以由控制器方法处理。
 
