--- a/WebReactive/1.3DispatcherHandler.md
+++ b/WebReactive/1.3DispatcherHandler.md
@@ -25,8 +25,8 @@ HttpHandler handler = WebHttpHandlerBuilder.applicationContext(context);
 
 Bean type|Explanation
 -|-
-HandlerMapping|将请求映射到处理程序。 映射基于某些条件，这些条件的详细信息因HandlerMapping实现而有所不同-带有注释的控制器，简单的URL模式映射以及其他。主要的HandlerMapping实现是用于@RequestMapping注释方法的RequestMappingHandlerMapping，用于功能端点路由的RouterFunctionMapping和用于URI路径模式和WebHandler实例的显式注册的SimpleUrlHandlerMapping。
-HandlerAdapter|帮助DispatcherHandler调用映射到请求的处理程序，而不管实际如何调用该处理程序。 例如，调用带注释的控制器需要解析注释。 HandlerAdapter的主要目的是使DispatcherHandler免受此类细节的影响。
+HandlerMapping|将请求映射到处理程序。 映射基于某些条件，这些条件的详细信息因HandlerMapping实现而有所不同-带有注解的控制器，简单的URL模式映射以及其他。主要的HandlerMapping实现是用于@RequestMapping注解方法的RequestMappingHandlerMapping，用于功能端点路由的RouterFunctionMapping和用于URI路径模式和WebHandler实例的显式注册的SimpleUrlHandlerMapping。
+HandlerAdapter|帮助DispatcherHandler调用映射到请求的处理程序，而不管实际如何调用该处理程序。 例如，调用带注解的控制器需要解析注解。 HandlerAdapter的主要目的是使DispatcherHandler免受此类细节的影响。
 HandlerResultHandler|处理来自处理程序调用的结果，并最终确定响应。 请参阅结果处理。
 
 ## 1.3.2 WebFlux Config
@@ -68,7 +68,7 @@ ViewResolutionResultHandler|CharSequence, View, Model, Map, Rendering, or any ot
 
 这就是支持@Controller类中的@ExceptionHandler方法的方式。 相比之下，Spring MVC中对相同功能的支持建立在HandlerExceptionResolver之上。 这通常不重要。 但是，请记住，在WebFlux中，不能使用@ControllerAdvice来处理在选择处理程序之前发生的异常。
 
-另请参见“带注释的控制器”部分中的“管理异常”或“ WebHandler API”部分中的“异常”。
+另请参见“带注解的控制器”部分中的“管理异常”或“ WebHandler API”部分中的“异常”。
 
 ## 1.3.6 View Resolution
 
